# skill-pilot

./: .gitignore  CLAUDE.md  SkillPilot-Plan.md  USER-MANUAL.md  index.html  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: linker.rs  mod.rs  profiles.rs  projects.rs  remote.rs  scanner.rs  shell.rs  stats.rs
src-tauri/src/models/: mod.rs  profile.rs  project.rs  remote.rs  skill.rs
src-tauri/src/ssh/: connection.rs  executor.rs  mod.rs
src/components/dependency-graph/: DependencyGraph.tsx
src/components/layout/: AppShell.tsx  TitleBar.tsx
src/components/profile-detail/: ProfileDetail.tsx
src/components/profile-editor/: ProfileApply.tsx  ProfileEditor.tsx
src/components/project-binder/: ProjectBinder.tsx  ProjectCard.tsx  ProjectEditModal.tsx
src/components/project-detail/: ProjectSkillView.tsx
src/components/remote/: ConnectionStatusBadge.tsx  EnvironmentSwitcher.tsx  RemoteServerForm.tsx  RemoteServerList.tsx
src/components/settings/: SettingsModal.tsx
src/components/sidebar/: ProfileList.tsx  ProjectList.tsx  RepoSection.tsx  Sidebar.tsx
src/components/skill-detail/: LinkStatus.tsx  MarkdownView.tsx  SkillDetail.tsx
src/store/: useProfileStore.ts  useProjectStore.ts  useRemoteStore.ts  useSkillStore.ts
src/styles/: globals.css
src/types/: profile.ts  project.ts  remote.ts  skill.ts
src/utils/: resolveProfileSkills.ts  tauri-remote.ts  tauri.ts
(+5 files in other folders)
