[package]
name = "skill-pilot"
version = "0.1.0"
description = "macOS Skill Manager for Claude Code"
authors = ["eamanc"]
edition = "2021"

[lib]
name = "skill_pilot_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
walkdir = "2"
dirs = "6"
anyhow = "1"
thiserror = "2"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
ssh2 = { version = "0.9", features = ["vendored-openssl"] }
uuid = { version = "1", features = ["v4", "serde"] }
shellexpand = "3"
